--- a/kooplexhub/hub/templates/container/new.html
+++ b/kooplexhub/hub/templates/container/new.html
@@ -7,7 +7,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form id="container_new" class="form-horizontal" action="{% url 'container:new' %}" method="post">
+      <form id="container_new" class="form-horizontal" action="{% url 'service:new' %}" method="post">
       {% csrf_token %}
         <div class="modal-body">
           <table>
