--- a/kooplexhub/hub/templates/project/startopen.html
+++ b/kooplexhub/hub/templates/project/startopen.html
@@ -6,18 +6,18 @@
   <div class="btn-group">
     {% with fc=project.containers|first %}
       {% if fc.state == fc.ST_RUNNING %}
-    <button type="button" class="btn btn-success"><a href="{% url 'container:open' fc.id next_page %}" role="button" class="btn-success" target="_blank" data-toggle="tooltip" title="Access environment {{ fc.name }}"><span class="oi oi-external-link" aria-hidden="true"> Open</a></button>
+    <button type="button" class="btn btn-success"><a href="{% url 'service:open' fc.id next_page %}" role="button" class="btn-success" target="_blank" data-toggle="tooltip" title="Access environment {{ fc.name }}"><span class="oi oi-external-link" aria-hidden="true"> Open</a></button>
       {% else %}
-    <button type="button" class="btn btn-outline-secondary"><a href="{% url 'container:start' fc.id next_page %}" role="button" class="btn-outline-secondary" data-toggle="tooltip" title="Start environment {{ fc.name }}"><span class="oi oi-flash" aria-hidden="true"> Start</a></button>
+    <button type="button" class="btn btn-outline-secondary"><a href="{% url 'service:start' fc.id next_page %}" role="button" class="btn-outline-secondary" data-toggle="tooltip" title="Start environment {{ fc.name }}"><span class="oi oi-flash" aria-hidden="true"> Start</a></button>
       {% endif %}
     {% endwith %}
     <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"></button>
     <div class="dropdown-menu">
     {% for container in project.containers %}
       {% if container.state == container.ST_RUNNING %}
-      <a class="dropdown-item" href="{% url 'container:open' container.id next_page %}" target="_blank"><span class="oi oi-external-link" aria-hidden="true"> Open {{ container.name }}</span></a>
+      <a class="dropdown-item" href="{% url 'service:open' container.id next_page %}" target="_blank"><span class="oi oi-external-link" aria-hidden="true"> Open {{ container.name }}</span></a>
       {% else %}
-      <a class="dropdown-item" href="{% url 'container:start' container.id next_page %}"><span class="oi oi-flash" aria-hidden="true"> Start {{ container.name }}</span></a>
+      <a class="dropdown-item" href="{% url 'service:start' container.id next_page %}"><span class="oi oi-flash" aria-hidden="true"> Start {{ container.name }}</span></a>
       {% endif %}
     {% endfor %}
     </div>
