fix filesync req token for more server backends

--- a/kooplexhub/hub/templates/service/filesynchronization.html
+++ b/kooplexhub/hub/templates/service/filesynchronization.html
@@ -62,55 +62,42 @@ a.active {
   <h2>Connected services</h2>
   <!-- We should organize into tabs each service -->
   <form id="fsRefreshLibForm" class="form-horizontal form-control">
-	  {% if fs_tokens|length == 0 %}
-          {% for s in syncservers %}
-          <div class="card bg-light mb-3">
-              <div class="card-header">
-                 <div class="row">
-                      <div class="col-8">
-		       {% if s.backend_type == s.TP_SEAFILE %}
-		           <a href="{{ s.url }}" rel="noreferrer" target="blank" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Login Seafile at {{ s.url }}" data-placement="top"><span class="oi oi-external-link" aria-hidden="true"></span></a>
-		       {% else %}
-		         {{ s.backend_type }}
-		       {% endif %}
-		       <span class="badge badge-pill badge-warning">Make sure you login to Seafile server so your account exists there as well</span>
-                      </div>
-                      <div class="col-2">
-                         <a href="{% url 'service_external:fs_newtoken' s.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a> <br style="margin:1ex">
-                      </div>
-                      <div class="col-2">
-                         <a href="#" role="button" class="btn btn-disabled" data-toggle="tooltip" title="Disabled" data-placement="top">Refresh</a> <br style="margin:1ex">
-                      </div>
-                 </div>
+    {% for s in syncservers %}
+      {% with t=s|get_usertoken:user %}
+        <div class="card bg-light mb-3">
+          <div class="card-header">
+            <div class="row">
+              <div class="col-8">
+                {% if s.backend_type == s.TP_SEAFILE %}
+	          <a href="{{ s.url }}" rel="noreferrer" target="blank" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Login Seafile at {{ s.url }}" data-placement="top"><span class="oi oi-external-link" aria-hidden="true"></span></a>
+                {% else %}
+                  <a href="{{ s.url }}" rel="noreferrer" target="blank" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Login {{s.backend_type }} at {{ s.url }}" data-placement="top"><span class="oi oi-external-link" aria-hidden="true"></span></a>
+                {% endif %}
+                {% if t %}
+                  <span class="badge badge-pill badge-info">Last updated: {{ t.last_used }}</span>
+                {% else %}
+                  <span class="badge badge-pill badge-warning">Make sure you login to Seafile server so your account exists there as well</span>
+                {% endif %}
               </div>
-          </div>
-          {% endfor %}
-	  {% else %}
-          {% for t in fs_tokens %}
-            {% with s=t.syncserver %}
-          <div class="card bg-light mb-3">
-              <div class="card-header">
-                 <div class="row">
-                      <div class="col-8">
-		       {% if s.backend_type == s.TP_SEAFILE %}
-		           <a href="{{ s.url }}" rel="noreferrer" target="blank" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Login Seafile at {{ s.url }}" data-placement="top"><span class="oi oi-external-link" aria-hidden="true"></span></a>
-		       {% else %}
-		         {{ s.backend_type }}
-		       {% endif %}
-		       <span class="badge badge-pill badge-info">Last updated: {{ t.last_used }}</span>
-                      </div>
-                      <div class="col-2">
-                         <a href="{% url 'service_external:fs_resettoken' t.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a> <br style="margin:1ex">
-                      </div>
-                      <div class="col-2">
-                         <a href="{% url 'service_external:fs_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a> <br style="margin:1ex">
-                      </div>
-                 </div>
+              <div class="col-2">
+                {% if t %}
+                  <a href="{% url 'service_external:fs_resettoken' t.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a> <br style="margin:1ex">
+                {% else %}
+                  <a href="{% url 'service_external:fs_newtoken' s.id %}" role="button" class="btn btn-danger" data-toggle="tooltip" title="Create a new token" data-placement="top">New token</a> <br style="margin:1ex">
+                {% endif %}
               </div>
+              <div class="col-2">
+                {% if t %}
+                  <a href="{% url 'service_external:fs_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a> <br style="margin:1ex">
+                {% else %}
+                  <a href="#" role="button" class="btn btn-disabled" data-toggle="tooltip" title="Disabled" data-placement="top">Refresh</a> <br style="margin:1ex">
+                {% endif %}
+              </div>
+            </div>
           </div>
-	    {% endwith %}
-          {% endfor %}
-	  {% endif %}
+        </div>
+      {% endwith %}
+    {% endfor %}
   </form>
   {% load render_table from django_tables2 %}
   <form id="fsSyncForm" class="form-horizontal form-control" action="{% url 'service_external:commit_sync' %}" method="post">
