--- a/kooplexhub/hub/templates/service/versioncontrol.html
+++ b/kooplexhub/hub/templates/service/versioncontrol.html
@@ -51,7 +51,7 @@ a.active {
 {% endblock %}
 
 {% block main_content_left %}
-  <form id="vcFilterRepoForm" class="form-horizontal form-control" action="{% url 'service:vc_search' %}" method="post">
+  <form id="vcFilterRepoForm" class="form-horizontal form-control" action="{% url 'service_external:vc_search' %}" method="post">
     {% csrf_token %}
     <div  class="alert alert-warning">
       <input type="text" name="repository" placeholder="repository" value="{{ search_repository }}">
@@ -61,9 +61,8 @@ a.active {
 {% endblock %}
 
 {% block main_content_center %}
-    <h3>Connected repositories</h3>
   <form id="fsRefreshLibForm" class="form-horizontal form-control">
-
+    <h3>Connected services</h3>
       {% for t in vc_tokens %}
         {% with s=t.repository %}
           <div class="card bg-light mb-3">
@@ -85,7 +84,7 @@ a.active {
 		       </h4>
                       </div>
                       <div class="col-2">
-                         <a href="{% url 'service:vc_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a> <br style="margin:1ex">
+                         <a href="{% url 'service_external:vc_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a> <br style="margin:1ex">
                       </div>
                  </div>
               </div>
@@ -96,7 +95,7 @@ a.active {
   </form>
   {% load render_table from django_tables2 %}
     <h3>Select repositories to clone</h3>
-  <form id="vcRepoForm" class="form-horizontal form-control" action="{% url 'service:commit_repo' %}" method="post">
+  <form id="vcRepoForm" class="form-horizontal form-control" action="{% url 'service_external:commit_repo' %}" method="post">
     {% csrf_token %}
     {% render_table tbl_repositories %}
     <div class="modal-footer">
