--- a/kooplexhub/hub/templates/service/service_submenu.html
+++ b/kooplexhub/hub/templates/service/service_submenu.html
@@ -4,7 +4,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSubmenu">
      <div class="col-3">
-        <h5><span class="badge badge-secondary" style="margin-right: 50px">Services</span></h5>
+        <h5><span class="badge badge-secondary" style="margin-right: 50px">External services</span></h5>
      </div>
      <div class="col-8">
         <ul class="navbar-nav mr-auto">
