--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -2,7 +2,7 @@
 
 {% block submenu %}
 <div class="navbar navbar-expand-lg navbar-light bg-light">
-  <h5><span class="badge badge-secondary">The list of your containers</span></h5>
+  <h5><span class="badge badge-secondary">List of your service containers</span></h5>
 </div>
 {% endblock %}
 
