--- a/kooplexhub/hub/templates/menuitem_project.html
+++ b/kooplexhub/hub/templates/menuitem_project.html
@@ -17,6 +17,6 @@
 {% endif %}
       <a class="dropdown-item" href="{% url 'project:join' %}">Join a project</a>
       <a class="dropdown-item" href="{% url 'project:list' %}">List projects</a>
-      <a class="dropdown-item" href="{% url 'project:showhide' 'project:list' %}">Show/hide projects</a>
+      <a class="dropdown-item" href="{% url 'project:showhide' %}">Show/hide projects</a>
     </div>
   </li>
