--- a/kooplexhub/hub/templates/project/configure.html
+++ b/kooplexhub/hub/templates/project/configure.html
@@ -1,34 +1,79 @@
 {% extends "layout.html" %}
 
+{% load render_table from django_tables2 %}
+
+{% comment %}
+FIXME: styling info in layout?
+{% endcomment %}
+
 {% block header_extra %}
-<style>
-a.active {
-background-color: #ccc;
-border-radius: 5px;
-}
-</style>
+{% load staticfiles %}
+
+<!--script src="https://kit.fontawesome.com/27d0a7c7d0.js"></script-->
+<link rel="stylesheet" href="{% static 'fontawesome-free-5.10.2-web/css/all.css' %}">
+
+<link rel="stylesheet" href="{% static 'css/bootstrap4-toggle.min.css' %}">
+<script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
 {% endblock %}
 
+
 {% block submenu %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSubmenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSubmenu">
-     <div class="col-3">
-    <h5><span class="badge badge-secondary" style="margin-right: 50px">Configure project {{ project }}</span></h5>
-     </div>
-     <div class="col-8">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a {% if submenu == 'meta' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:conf_meta' project.id next_page %}" {% endif %}>Meta</a></li>
-      <li class="nav-item"><a {% if submenu == 'collaboration' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:conf_collaboration' project.id next_page %}" {% endif %}>Collaboration</a></li>
-      <li class="nav-item"><a {% if submenu == 'environment' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:conf_environment' project.id next_page %}" {% endif %}>Environment</a></li>
-      <!--li class="nav-item"><a {% if submenu == 'storage' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:conf_storage' project.id next_page %}" {% endif %}>Data</a></li-->
-      <li class="nav-item"><a {% if submenu == 'versioncontrol' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:conf_versioncontrol' project.id next_page %}" {% endif %}>Versioncontrol</a></li>
-      <li class="nav-item"><a {% if submenu == 'filesync' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:conf_filesync' project.id next_page %}" {% endif %}>Synchronization</a></li>
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+  <h5><span class="badge badge-secondary">Configure project {{ project.name }}</span></h5>
+</div>
+{% comment %}
+FIXME: add shortcuts here? join
+{% endcomment %}
+{% endblock %}
+
+{% block main_content_center %}
+<form id="project-manage" class="form-horizontal" action="{% url 'project:configure' project.id %}" method="post">
+{% csrf_token %}
+
+<div class="card">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs" id="projectConfigTabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link" id="tab-meta" data-toggle="tab" href="#meta" role="tab" aria-controls="meta" aria-selected="false">Meta</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" id="tab-collaboration" data-toggle="tab" href="#collaboration" role="tab" aria-controls="collaboration" aria-selected="true">Collaboration</a>
+      </li>
     </ul>
-     </div>
   </div>
-</nav>
+
+  <div class="card-body tab-content" id="projectConfigTabContent">
+    <div class="tab-pane fade" id="meta" role="tabpanel" aria-labelledby="tab-meta">
+      <input type="hidden" name="active_tab" value="meta">
+      <h5 class="card-title">Describe your project</h5>
+      <textarea class="form-control" rows="6" cols="50" id="description" name="description">{{ project.description }}</textarea>
+      <h5 class="card-title">Change the scope for this project</h5>
+      <select id="project_scopes-{{ project.id }}" name="project_scope">
+        {% for scope in project.SCOPE_LIST %}
+          <option value="{{ scope }}" {% if project.scope == scope %} selected {% endif %}>{{ scope }}</option>
+        {% endfor %}
+      </select>
+    </div>
+
+    <div class="tab-pane fade show active" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
+      <input type="hidden" name="active_tab" value="collaboration">
+      <h5 class="card-title">Select collaborators of this project</h5>
+      {% if t_collaborators %}
+        {% render_table t_collaborators %}
+        <h5 class="card-title">Select environments to create for your collaborators</h5>
+        TBA
+      {% else %}
+        You cannot manage collaboration of this project.
+      {% endif %}
+    </div>
+    
+    <div class="card-footer text-right">
+      <button type="submit" class="btn btn-default" name="button" value="apply">Apply settings</button>
+      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+    </div>
+  </div>
+</div>
+
+</form>
 {% endblock %}
 
